# law-office-frontend

./: .env.example  .gitignore  CHECKLIST-NETLIFY.md  DEPLOYMENT.md  Dockerfile  GOOGLE-APPS-SCRIPT-SETUP.md  NETLIFY-DEPLOY.md  PRODUCTION_CHECKLIST.md  QUICK-START.md  README.md  START-HERE.md  TEAM-INFO.md  docker-compose.yml  google-apps-script-FIXED-UTF8.js  google-script-config-2026.js  netlify.toml  nginx.conf  package-lock.json  package.json  test-google-script.html
.claude/: settings.local.json
.github/: SHUTTLE_SETUP.md
.github/workflows/: ci.yml  deploy-backend.yml  security.yml
backend/: .dockerignore  Cargo.toml  Shuttle.toml
backend/migrations/: 001_initial_schema.sql
backend/src/: main.rs
backend/src/db/: audit.rs  mod.rs  tasks.rs  users.rs
backend/src/handlers/: health.rs  mod.rs  stats.rs  tasks.rs  users.rs
backend/src/models/: attachment.rs  audit.rs  mod.rs  task.rs  user.rs
backend/src/routes/: mod.rs
backend/src/services/: email.rs
backend/src/utils/: config.rs  errors.rs  jwt.rs  mod.rs
docs/: ARCHITECTURE_IMPROVEMENT_PLAN.md  GETTING-STARTED.md  GOOGLE-APPS-SCRIPT-SETUP.md  PROJECT-SUMMARY.md  QUICK-REFERENCE.md  QUICK-START.md  START-HERE.md  TEAM-INFO.md
docs/demos/: card-demo.html  sidebar-demo.html
frontend/: README.md  dashboard-new.html  dashboard-secretary.html  dashboard.html  index.html  login.html  manifest.json  modal-demo.html  sw.js  task-response.html  test-locally.bat
google-apps-script/: Code-gs-with-push.js  google-apps-script-COMPLETE.js  google-apps-script-FIXED-UTF8.js  push-notifications.gs.js
scripts/: build-code.ps1  create-project.ps1  shuttle-setup.ps1
(+27 files in other folders)
