[package]
name = "law-office-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros"] }
shuttle-axum = "0.47"
shuttle-runtime = "0.47"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
shuttle-shared-db = { version = "0.47", features = ["postgres"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Email
lettre = { version = "0.11", features = ["tokio1-rustls-tls", "smtp-transport", "builder", "hostname"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "limit"] }
rand = "0.8"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Security
bcrypt = "0.15"
jsonwebtoken = "9"
validator = { version = "0.18", features = ["derive"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Environment
dotenvy = "0.15"

# Performance & Metrics
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

[dev-dependencies]
# Testing
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1.0", features = ["full"] }
http-body-util = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
